added hashing to password

--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -11,6 +11,9 @@ block content
     label(for='password') Password: 
     input(type= 'text' name='password')
     br
+    label(for='email') Email: 
+    input(type= 'text' name='email')
+    br
     label(for='q1') What's your favorite polution? 
     select(name='polution')
       option(value="Water") Water Polution
