--- a/views/update.pug
+++ b/views/update.pug
@@ -2,17 +2,17 @@ extends layout
 
 block content
   form(id='form', method='post', action='/edit/' + person.id)
-    label(for='name') Name: 
-    input(type='text', name='name' value=person.name)
+    label(for='userName') Name: 
+    input(type='text', name='userName' value=person.name)
     br
     label(for='age') Age: 
     input(type='text', name='age' value=person.age)
     br
     label(for='password') Password:
     input(type='text', name='password' value=person.password)
-    br 
-    label(for='description') Description: 
-    input(type='text', name='description' value=person.description)
+    br
+    label(for='email') Email:
+    input(type='text', name='email' value=person.email)
     br
     label(for='q1') What's your favorite polution? 
     select(name='polution')
