added canvases for charts and script for charts

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,7 @@ extends layout
 block content
   a(href="/login/") Login
   a(href="/create/") Sign up
+  canvas(width=400, height=400, id="q1")
+  canvas(width=400, height=400, id="q2")
+  canvas(width=400, height=400, id="q3")
+  script(src="scripts/graph.js")
