password not being saved

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  form(id='form', method='post', action='/create')
+  form(id='form', method='post', action='/login')
     label(for='userName') User Name: 
     input(type='text', name='userName')
     br
