--- a/views/index.pug
+++ b/views/index.pug
@@ -4,3 +4,29 @@ block content
   a(href="/login/") Login
   br
   a(href="/create/") Sign up
+  br
+  table(class='gridtable')
+    tr
+      th Id
+      th Name
+      th Age
+      th Password
+      th q1
+      th
+      th 
+    each item in people
+      tr
+        td
+          a(href='/details/' + item.id) #{item.id}
+        td #{item.userName}
+        td #{item.age}
+        td #{item.password}
+        td #{item.q1}
+        td
+          a(href='/edit/' + item.id) Edit
+        td
+          a(href='/delete/' + item.id) Delete
+
+  p
+  #menu
+    a(href='/create') Add new person
