--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,12 @@ doctype html
 html
   head
   body
+    nav 
+      ul
+        li
+          a(href='/') Home
+        li
+          a(href='/details') Details
     div(id='content')
       block content
       
