--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -16,10 +16,10 @@ block content
     br
     label(for='q1') What's your favorite polution? 
     select(name='polution')
-      option(value="Water") Water Polution
-      option(value="Air") Air Polution
-      option(value='Noise') Noise Polution
-      option(value='Radioactive') Radioactive Polution
+      option(value="Water Polution") Water Polution
+      option(value="Air Polution") Air Polution
+      option(value='Noise Polution') Noise Polution
+      option(value='Radioactive Polution') Radioactive Polution
     br
     label(for='q2') What's your favorite food? 
     select(name='food')
