--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -15,21 +15,21 @@ block content
     input(type= 'text' name='email')
     br
     label(for='q1') What's your favorite polution? 
-    select(name='polution')
+    select(name='q1')
       option(value="Water") Water Polution
       option(value="Air") Air Polution
       option(value='Noise') Noise Polution
       option(value='Radioactive') Radioactive Polution
     br
     label(for='q2') What's your favorite food? 
-    select(name='food')
+    select(name='q2')
       option(value="Pizza") Pizza
       option(value="Steak") Steak
       option(value="Salad") Salad
       option(value="Crap") Crap
     br
     label(for='q3') What's your favorite pet? 
-    select(name='favPet')
+    select(name='q3')
       option(value="Cat") Cat
       option(value="Dog") Dog
       option(value="Bird") Bird
