--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,10 @@
 extends layout
 
 block content
+  each item in people
+    p #{item}
+  div(onclick="printThing(people)")
+    p hello
   a(href="/login/") Login
   br
   a(href="/create/") Sign up
