--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,10 @@ html
           a(href='/') Home
         li
           a(href='/details') Details
+        li
+          a(href='/login') Login
+        li
+          a(href='/create') Sign up
     div(id='content')
       block content
       
