--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  form(id='form', method='post', action='/create')
+  form(id='form', method='post', action='/create', class='form-style-1')
     label(for='userName') User Name: 
     input(type='text', name='userName')
     br
@@ -14,7 +14,7 @@ block content
     label(for='email') Email: 
     input(type= 'text' name='email')
     br
-    label(for='q1') What's your favorite polution? 
+    label(for='q1') What's your favorite type of pollution? 
     select(name='polution')
       option(value="Water") Water Polution
       option(value="Air") Air Polution
